fix padding issue with <i> on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -223,6 +223,7 @@ footer {
 
   i {
     font-size: 18px;
+    padding: 0 0;
   }
   li br {
     display: none;
